Status feature Initial implementation