@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-      
-  <modelVersion>4.0.0</modelVersion>
-<groupId>eg.gov.iti.jets</groupId>
-<artifactId>ChatApplication</artifactId>
- <packaging>pom</packaging>
- <version>1.0-SNAPSHOT</version>
-  
-  <name>ChatApplication</name>
-  <url>http://maven.apache.org</url>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>eg.gov.iti.jets</groupId>
+    <artifactId>ChatApplication</artifactId>
+    <packaging>pom</packaging>
+    <version>1.0-SNAPSHOT</version>
+
+    <name>ChatApplication</name>
+    <url>http://maven.apache.org</url>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -73,7 +74,6 @@
         </dependency>
 
 
-
         <dependency>
             <groupId>org.kordamp.ikonli</groupId>
             <artifactId>ikonli-fontawesome5-pack</artifactId>
@@ -86,7 +86,6 @@
             <artifactId>bootstrapfx-core</artifactId>
             <version>${bootstrapfx.version}</version>
         </dependency>
-
 
 
         <!-- https://mvnrepository.com/artifact/com.oracle.database.jdbc/ojdbc10 -->
@@ -130,11 +129,10 @@
     </dependencies>
 
     <modules>
-    <module>ClientSideApplication</module>        
-    <module>ServerSideApplication</module>
-    <module>ClientServerContract</module>
+        <module>ClientSideApplication</module>
+        <module>ServerSideApplication</module>
+        <module>ClientServerContract</module>
     </modules>
-
 
 
     <build>
@@ -191,6 +189,8 @@
                         <option>javafx.graphics/com.sun.javafx.stage=com.jfoenix</option>
                         <option>--add-exports</option>
                         <option>javafx.base/com.sun.javafx.event=com.jfoenix</option>
+                        <option>--add-exports</option>
+                        <option>javafx.graphics/com.sun.javafx.scene=com.jfoenix</option>
                     </options>
                 </configuration>
             </plugin>
